explorations/static_library/src/vex_headers/v5_apitypes.h


struct time {
  uint8_t   ti_hour;                      
  uint8_t   ti_min;                       
  uint8_t   ti_sec;                       
  uint8_t   ti_hund;                      
};
typedef enum _V5_DeviceLedColor {
    kLedColorBlack   = 0,
    kLedColorRed     = 0xFF0000,
    kLedColorGreen   = 0x00FF00,
    kLedColorBlue    = 0x0000FF,
    kLedColorYellow  = 0xFFFF00,
    kLedColorCyan    = 0x00FFFF,
    kLedColorMagenta = 0xFF00FF,
    kLedColorWhite   = 0xFFFFFF
} V5_DeviceLedColor;
typedef enum _V5_AdiPortConfiguration {
    kAdiPortTypeAnalogIn = 0,
    kAdiPortTypeAnalogOut,
    kAdiPortTypeDigitalIn,
    kAdiPortTypeDigitalOut,
    kAdiPortTypeSmartButton,
    kAdiPortTypeSmartPot,
    kAdiPortTypeLegacyButton,
    kAdiPortTypeLegacyPotentiometer,
    kAdiPortTypeLegacyLineSensor,
    kAdiPortTypeLegacyLightSensor,
    kAdiPortTypeLegacyGyro,
    kAdiPortTypeLegacyAccelerometer,
    kAdiPortTypeLegacyServo,
    kAdiPortTypeLegacyPwm,
    kAdiPortTypeQuadEncoder,
    kAdiPortTypeSonar,
    kAdiPortTypeLegacyPwmSlew,
    kAdiPortTypeUndefined = 255
} V5_AdiPortConfiguration;
typedef enum _V5_DeviceBumperState {
    kBumperReleased  = 0,                 
    kBumperPressed   = 1                  
} V5_DeviceBumperState;
typedef enum  {
    kMotorControlModeOFF         = 0,     
    kMotorControlModeBRAKE       = 1,     
    kMotorControlModeHOLD        = 2,     
    kMotorControlModeSERVO       = 3,     
    kMotorControlModePROFILE     = 4,     
    kMotorControlModeVELOCITY    = 5,     
    kMotorControlModeUNDEFINED   = 6      
} V5MotorControlMode;
typedef enum _V5_MotorBrakeMode {
    kV5MotorBrakeModeCoast       = 0,     
    kV5MotorBrakeModeBrake       = 1,     
    kV5MotorBrakeModeHold        = 2      
} V5MotorBrakeMode;
typedef enum  {
    kMotorEncoderDegrees         = 0,     
    kMotorEncoderRotations       = 1,     
    kMotorEncoderCounts          = 2      
} V5MotorEncoderUnits;
typedef enum _V5MotorGearset {
  kMotorGearSet_36 = 0,                   
  kMotorGearSet_18 = 1,                   
  kMotorGearSet_06 = 2                    
} V5MotorGearset;
typedef struct __attribute__ ((__packed__)) _V5_DeviceMotorPid {
	uint8_t   kf;
	uint8_t   kp;
	uint8_t   ki;
	uint8_t   kd;
	uint8_t   filter;
	uint8_t   pad1;
	uint16_t  limit;
	uint8_t   threshold;
	uint8_t   loopspeed;
	uint8_t   pad2[2];
} V5_DeviceMotorPid;
typedef enum {
  kVisionModeNormal      = 0,
  kVisionModeMixed       = 1,
  kVisionModeLineDetect  = 2,
  kVisionTypeTest        = 3
} V5VisionMode;
typedef enum {
  kVisionTypeNormal      = 0,
  kVisionTypeColorCode   = 1,
  kVisionTypeLineDetect  = 2
} V5VisionBlockType;
typedef struct __attribute__ ((__packed__)) _V5_DeviceVisionSignature {
    uint8_t             id;
    uint8_t             flags;
    uint8_t             pad[2];
    float               range;
    int32_t             uMin;
    int32_t             uMax;
    int32_t             uMean;
    int32_t             vMin;
    int32_t             vMax;
    int32_t             vMean;
    uint32_t            mRgb;
    uint32_t            mType;
} V5_DeviceVisionSignature;
typedef struct __attribute__ ((__packed__)) _V5_DeviceVisionObject {
    uint16_t            signature;        
    V5VisionBlockType   type;             
    uint16_t            xoffset;          
    uint16_t            yoffset;          
    uint16_t            width;            
    uint16_t            height;           
    uint16_t            angle;            
} V5_DeviceVisionObject;
typedef struct __attribute__ ((__packed__)) _V5_DeviceImuRaw {
    double              x;
    double              y;
    double              z;
    double              w;
} V5_DeviceImuRaw;
typedef enum _V5ImuHeadingnMode {
    kImuHeadingNative     = 0x00,
    kImuHeadingIQ         = 0x01
} _V5ImuHeadingnMode;
typedef enum _V5ImuOrientationMode {
    kImuOrientationZUp    = 0x00,
    kImuOrientationZDown  = 0x10,
    kImuOrientationXUp    = 0x20,
    kImuOrientationXDown  = 0x30,
    kImuOrientationYUp    = 0x40,
    kImuOrientationYDown  = 0x50,
    kImuOrientationAuto   = 0x80
} V5ImuOrientationMode;
typedef enum _V5ImuQuaternionMode {
    kImuQuaternionProcessed = 0x000,
    kImuQuaternionRaw       = 0x100
} V5ImuQuaternionMode;
typedef struct _V5_DeviceOpticalRaw {
    uint16_t     clear;
    uint16_t     red;
    uint16_t     green;
    uint16_t     blue;
} V5_DeviceOpticalRaw;
typedef struct _V5_DeviceOpticalRgb {
    double       red;
    double       green;
    double       blue;
    double       brightness;
} V5_DeviceOpticalRgb;
typedef struct _V5_DeviceOpticalGesture {
    uint8_t      udata;
    uint8_t      ddata;
    uint8_t      ldata;
    uint8_t      rdata;
    uint8_t      type;
    uint8_t      pad;
    uint16_t     count;
    uint32_t     time;
} V5_DeviceOpticalGesture;
typedef enum _V5_DeviceMagnetDuration {
    kMagnetDurationShort,
    kMagnetDurationMedium,
    kMagnetDurationLong,
    kMagnetDurationExtraLong,
} V5_DeviceMagnetDuration;
typedef struct __attribute__ ((__packed__)) _V5_DeviceGpsQuaternion {
    double              a;
    double              b;
    double              c;
    double              d;
} V5_DeviceGpsQuaternion;
typedef struct __attribute__ ((__packed__)) _V5_DeviceGpsAttitude {
    double              pitch;  
    double              roll;   
    double              yaw;    
    double              position_x;
    double              position_y;
    double              position_z;
    double              az;
    double              el;
    double              rot;
} V5_DeviceGpsAttitude;
typedef struct __attribute__ ((__packed__)) _V5_DeviceGpsRaw {
    double              x;
    double              y;
    double              z;
    double              w;
} V5_DeviceGpsRaw;
typedef struct __attribute__ (( __packed__ )) _V5_DeviceAicamObject {
    int16_t         type;     
    int16_t         xpos;  
    int16_t         ypos;  
    int16_t         zpos;  
    int16_t         width;    
    int16_t         height;   
} V5_DeviceAicamObject;
typedef   void          FIL;
typedef enum {
    FR_OK = 0U,                           
    FR_DISK_ERR,                          
    FR_INT_ERR,                           
    FR_NOT_READY,                         
    FR_NO_FILE,                           
    FR_NO_PATH,                           
    FR_INVALID_NAME,                      
    FR_DENIED,                            
    FR_EXIST,                             
    FR_INVALID_OBJECT,                    
    FR_WRITE_PROTECTED,                   
    FR_INVALID_DRIVE,                     
    FR_NOT_ENABLED,                       
    FR_NO_FILESYSTEM,                     
    FR_MKFS_ABORTED,                      
    FR_TIMEOUT,                           
    FR_LOCKED,                            
    FR_NOT_ENOUGH_CORE,                   
    FR_TOO_MANY_OPEN_FILES,               
    FR_INVALID_PARAMETER                  
} FRESULT;
typedef enum _touchEvent {
    kTouchEventRelease,
    kTouchEventPress,
    kTouchEventPressAuto
} V5_TouchEvent;
typedef struct _V5_TouchStatus {
    V5_TouchEvent lastEvent;
    int16_t       lastXpos;
    int16_t       lastYpos;
    int32_t       pressCount;
    int32_t       releaseCount;
} V5_TouchStatus;
typedef struct __attribute__ ((__packed__)) _v5_image {
    uint16_t  width;
    uint16_t  height;
    uint32_t *data;
    uint32_t *p;
} v5_image;