explorations/vex-rs/target/armv7a-vex-eabi/release/build/static_library-ac6bc70f8e50db25/out/bindings.rs

pub type V5_DeviceImuRaw = _V5_DeviceImuRaw;
pub const _V5ImuHeadingnMode_kImuHeadingNative: _V5ImuHeadingnMode = 0;
pub const _V5ImuHeadingnMode_kImuHeadingIQ: _V5ImuHeadingnMode = 1;
pub type _V5ImuHeadingnMode = ::core::ffi::c_uint;
pub const _V5ImuOrientationMode_kImuOrientationZUp: _V5ImuOrientationMode = 0;
pub const _V5ImuOrientationMode_kImuOrientationZDown: _V5ImuOrientationMode = 16;
pub const _V5ImuOrientationMode_kImuOrientationXUp: _V5ImuOrientationMode = 32;
pub const _V5ImuOrientationMode_kImuOrientationXDown: _V5ImuOrientationMode = 48;
pub const _V5ImuOrientationMode_kImuOrientationYUp: _V5ImuOrientationMode = 64;
pub const _V5ImuOrientationMode_kImuOrientationYDown: _V5ImuOrientationMode = 80;
pub const _V5ImuOrientationMode_kImuOrientationAuto: _V5ImuOrientationMode = 128;
pub type _V5ImuOrientationMode = ::core::ffi::c_uint;
pub use self::_V5ImuOrientationMode as V5ImuOrientationMode;
pub const _V5ImuQuaternionMode_kImuQuaternionProcessed: _V5ImuQuaternionMode = 0;
pub const _V5ImuQuaternionMode_kImuQuaternionRaw: _V5ImuQuaternionMode = 256;
pub type _V5ImuQuaternionMode = ::core::ffi::c_uint;
pub use self::_V5ImuQuaternionMode as V5ImuQuaternionMode;
#[doc = " @brief      V5 Color sensor definitions"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _V5_DeviceOpticalRaw {
    pub clear: u16,
    pub red: u16,
    pub green: u16,
    pub blue: u16,
}
#[doc = " @brief      V5 Color sensor definitions"]
pub type V5_DeviceOpticalRaw = _V5_DeviceOpticalRaw;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _V5_DeviceOpticalRgb {
    pub red: f64,
    pub green: f64,
    pub blue: f64,
    pub brightness: f64,
}
pub type V5_DeviceOpticalRgb = _V5_DeviceOpticalRgb;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _V5_DeviceOpticalGesture {
    pub udata: u8,
    pub ddata: u8,
    pub ldata: u8,
    pub rdata: u8,
    pub type_: u8,
    pub pad: u8,
    pub count: u16,
    pub time: u32,
}
pub type V5_DeviceOpticalGesture = _V5_DeviceOpticalGesture;
pub const _V5_DeviceMagnetDuration_kMagnetDurationShort: _V5_DeviceMagnetDuration = 0;
pub const _V5_DeviceMagnetDuration_kMagnetDurationMedium: _V5_DeviceMagnetDuration = 1;
pub const _V5_DeviceMagnetDuration_kMagnetDurationLong: _V5_DeviceMagnetDuration = 2;
pub const _V5_DeviceMagnetDuration_kMagnetDurationExtraLong: _V5_DeviceMagnetDuration = 3;
#[doc = " @brief      V5 magnet definitions"]
pub type _V5_DeviceMagnetDuration = ::core::ffi::c_uint;
#[doc = " @brief      V5 magnet definitions"]
pub use self::_V5_DeviceMagnetDuration as V5_DeviceMagnetDuration;
#[doc = " @brief      V5 gps definitions"]
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct _V5_DeviceGpsQuaternion {
    pub a: f64,
    pub b: f64,
    pub c: f64,
    pub d: f64,
}
#[doc = " @brief      V5 gps definitions"]
pub type V5_DeviceGpsQuaternion = _V5_DeviceGpsQuaternion;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct _V5_DeviceGpsAttitude {
    pub pitch: f64,
    pub roll: f64,
    pub yaw: f64,
    pub position_x: f64,
    pub position_y: f64,
    pub position_z: f64,
    pub az: f64,
    pub el: f64,
    pub rot: f64,
}
pub type V5_DeviceGpsAttitude = _V5_DeviceGpsAttitude;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct _V5_DeviceGpsRaw {
    pub x: f64,
    pub y: f64,
    pub z: f64,
    pub w: f64,
}
pub type V5_DeviceGpsRaw = _V5_DeviceGpsRaw;
#[doc = " @brief      V5 AI Camera definitions"]
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct _V5_DeviceAicamObject {
    pub type_: i16,
    pub xpos: i16,
    pub ypos: i16,
    pub zpos: i16,
    pub width: i16,
    pub height: i16,
}
#[doc = " @brief      V5 AI Camera definitions"]
pub type V5_DeviceAicamObject = _V5_DeviceAicamObject;
#[doc = " @brief      V5 SD File system definitions"]
pub type FIL = ::core::ffi::c_void;
pub const FRESULT_FR_OK: FRESULT = 0;
#[doc = " (0) Succeeded"]
pub const FRESULT_FR_DISK_ERR: FRESULT = 1;
#[doc = " (1) A hard error occurred in the low level disk I/O layer"]
pub const FRESULT_FR_INT_ERR: FRESULT = 2;
#[doc = " (2) Assertion failed"]
pub const FRESULT_FR_NOT_READY: FRESULT = 3;
#[doc = " (3) The physical drive cannot work"]
pub const FRESULT_FR_NO_FILE: FRESULT = 4;
#[doc = " (4) Could not find the file"]
pub const FRESULT_FR_NO_PATH: FRESULT = 5;
#[doc = " (5) Could not find the path"]
pub const FRESULT_FR_INVALID_NAME: FRESULT = 6;
#[doc = " (6) The path name format is invalid"]
pub const FRESULT_FR_DENIED: FRESULT = 7;
#[doc = " (7) Access denied due to prohibited access or directory full"]
pub const FRESULT_FR_EXIST: FRESULT = 8;
#[doc = " (8) Access denied due to prohibited access"]
pub const FRESULT_FR_INVALID_OBJECT: FRESULT = 9;
#[doc = " (9) The file/directory object is invalid"]
pub const FRESULT_FR_WRITE_PROTECTED: FRESULT = 10;
#[doc = " (10) The physical drive is write protected"]
pub const FRESULT_FR_INVALID_DRIVE: FRESULT = 11;
#[doc = " (11) The logical drive number is invalid"]
pub const FRESULT_FR_NOT_ENABLED: FRESULT = 12;
#[doc = " (12) The volume has no work area"]
pub const FRESULT_FR_NO_FILESYSTEM: FRESULT = 13;
#[doc = " (13) There is no valid FAT volume"]
pub const FRESULT_FR_MKFS_ABORTED: FRESULT = 14;
#[doc = " (14) The f_mkfs() aborted due to any parameter error"]
pub const FRESULT_FR_TIMEOUT: FRESULT = 15;
#[doc = " (15) Could not get a grant to access the volume within defined period"]
pub const FRESULT_FR_LOCKED: FRESULT = 16;
#[doc = " (16) The operation is rejected according to the file sharing policy"]
pub const FRESULT_FR_NOT_ENOUGH_CORE: FRESULT = 17;
#[doc = " (17) LFN working buffer could not be allocated"]
pub const FRESULT_FR_TOO_MANY_OPEN_FILES: FRESULT = 18;
#[doc = " (18) Number of open files > _FS_SHARE"]
pub const FRESULT_FR_INVALID_PARAMETER: FRESULT = 19;
pub type FRESULT = ::core::ffi::c_uint;
pub const _touchEvent_kTouchEventRelease: _touchEvent = 0;
pub const _touchEvent_kTouchEventPress: _touchEvent = 1;
pub const _touchEvent_kTouchEventPressAuto: _touchEvent = 2;
#[doc = " @brief      V5 touch events"]
pub type _touchEvent = ::core::ffi::c_uint;
#[doc = " @brief      V5 touch events"]
pub use self::_touchEvent as V5_TouchEvent;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _V5_TouchStatus {
    pub lastEvent: V5_TouchEvent,
    pub lastXpos: i16,
    pub lastYpos: i16,
    pub pressCount: i32,
    pub releaseCount: i32,
}
pub type V5_TouchStatus = _V5_TouchStatus;
#[doc = " @brief   structure holding image info - used by bmp/png read code"]
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct _v5_image {
    pub width: u16,
    pub height: u16,
    pub data: *mut u32,
    pub p: *mut u32,
}
#[doc = " @brief   structure holding image info - used by bmp/png read code"]
pub type v5_image = _v5_image;
extern "C" {
    pub fn vexDelay(timems: u32);
}
extern "C" {
    pub fn vexLedSet(index: u32, value: V5_DeviceLedColor);
}
extern "C" {
    pub fn vexLedRgbSet(index: u32, color: u32);
}
extern "C" {
    pub fn vexLedGet(index: u32) -> V5_DeviceLedColor;
}
extern "C" {
    pub fn vexLedRgbGet(index: u32) -> u32;
}
extern "C" {
    pub fn vexAdiPortConfigSet(index: u32, port: u32, type_: V5_AdiPortConfiguration);
}
extern "C" {
    pub fn vexAdiPortConfigGet(index: u32, port: u32) -> V5_AdiPortConfiguration;
}
extern "C" {
    pub fn vexAdiValueSet(index: u32, port: u32, value: i32);
}
extern "C" {
    pub fn vexAdiValueGet(index: u32, port: u32) -> i32;
}
extern "C" {
    pub fn vexBumperGet(index: u32) -> V5_DeviceBumperState;
}
extern "C" {
    pub fn vexGyroReset(index: u32);
}
extern "C" {
    pub fn vexGyroHeadingGet(index: u32) -> f64;
}
extern "C" {
    pub fn vexGyroDegreesGet(index: u32) -> f64;
}
extern "C" {
    pub fn vexSonarValueGet(index: u32) -> i32;
}
extern "C" {
    pub fn vexGenericValueGet(index: u32) -> i32;
}
extern "C" {
    pub fn vexMotorVelocitySet(index: u32, velocity: i32);
}
extern "C" {
    pub fn vexMotorVelocityUpdate(index: u32, velocity: i32);
}
extern "C" {
    pub fn vexMotorVoltageSet(index: u32, value: i32);
}
extern "C" {
    pub fn vexMotorVelocityGet(index: u32) -> i32;
}
extern "C" {
    pub fn vexMotorDirectionGet(index: u32) -> i32;
}
extern "C" {
    pub fn vexMotorActualVelocityGet(index: u32) -> f64;
}
extern "C" {
    pub fn vexMotorModeSet(index: u32, mode: V5MotorControlMode);
}
extern "C" {
    pub fn vexMotorModeGet(index: u32) -> V5MotorControlMode;
}
extern "C" {
    pub fn vexMotorPwmSet(index: u32, value: i32);
}
extern "C" {
    pub fn vexMotorPwmGet(index: u32) -> i32;
}
extern "C" {
    pub fn vexMotorCurrentLimitSet(index: u32, value: i32);
}
extern "C" {
    pub fn vexMotorCurrentLimitGet(index: u32) -> i32;
}
extern "C" {
    pub fn vexMotorVoltageLimitSet(index: u32, value: i32);
}
extern "C" {
    pub fn vexMotorVoltageLimitGet(index: u32) -> i32;
}
extern "C" {
    pub fn vexMotorPositionPidSet(index: u32, pid: *mut V5_DeviceMotorPid);
}
extern "C" {
    pub fn vexMotorVelocityPidSet(index: u32, pid: *mut V5_DeviceMotorPid);
}
extern "C" {
    pub fn vexMotorCurrentGet(index: u32) -> i32;
}
extern "C" {
    pub fn vexMotorVoltageGet(index: u32) -> i32;
}
extern "C" {
    pub fn vexMotorPowerGet(index: u32) -> f64;
}
extern "C" {
    pub fn vexMotorTorqueGet(index: u32) -> f64;
}
extern "C" {
    pub fn vexMotorEfficiencyGet(index: u32) -> f64;
}
extern "C" {
    pub fn vexMotorTemperatureGet(index: u32) -> f64;
}
extern "C" {
    pub fn vexMotorOverTempFlagGet(index: u32) -> bool;
}
extern "C" {
    pub fn vexMotorCurrentLimitFlagGet(index: u32) -> bool;
}
extern "C" {
    pub fn vexMotorFaultsGet(index: u32) -> u32;
}
extern "C" {
    pub fn vexMotorZeroVelocityFlagGet(index: u32) -> bool;
}
extern "C" {
    pub fn vexMotorZeroPositionFlagGet(index: u32) -> bool;
}
extern "C" {
    pub fn vexMotorFlagsGet(index: u32) -> u32;
}
extern "C" {
    pub fn vexMotorReverseFlagSet(index: u32, value: bool);
}
extern "C" {
    pub fn vexMotorReverseFlagGet(index: u32) -> bool;
}
extern "C" {
    pub fn vexMotorEncoderUnitsSet(index: u32, units: V5MotorEncoderUnits);
}
extern "C" {
    pub fn vexMotorEncoderUnitsGet(index: u32) -> V5MotorEncoderUnits;
}
extern "C" {
    pub fn vexMotorBrakeModeSet(index: u32, mode: V5MotorBrakeMode);
}
extern "C" {
    pub fn vexMotorBrakeModeGet(index: u32) -> V5MotorBrakeMode;
}
extern "C" {
    pub fn vexMotorPositionSet(index: u32, position: f64);
}
extern "C" {
    pub fn vexMotorPositionGet(index: u32) -> f64;
}
extern "C" {
    pub fn vexMotorPositionRawGet(index: u32, timestamp: *mut u32) -> i32;
}
extern "C" {
    pub fn vexMotorPositionReset(index: u32);
}
extern "C" {
    pub fn vexMotorTargetGet(index: u32) -> f64;
}
extern "C" {
    pub fn vexMotorServoTargetSet(index: u32, position: f64);
}
extern "C" {
    pub fn vexMotorAbsoluteTargetSet(index: u32, position: f64, velocity: i32);
}
extern "C" {
    pub fn vexMotorRelativeTargetSet(index: u32, position: f64, velocity: i32);
}
extern "C" {
    pub fn vexMotorGearingSet(index: u32, value: V5MotorGearset);
}
extern "C" {
    pub fn vexMotorGearingGet(index: u32) -> V5MotorGearset;
}
extern "C" {
    pub fn vexMotorExternalProfileSet(index: u32, position: f64, velocity: i32);
}
extern "C" {
    pub fn vexVisionModeSet(index: u32, mode: V5VisionMode);
}
extern "C" {
    pub fn vexVisionModeGet(index: u32) -> V5VisionMode;
}
extern "C" {
    pub fn vexVisionObjectCountGet(index: u32) -> i32;
}
extern "C" {
    pub fn vexVisionObjectGet(
        index: u32,
        indexObj: u32,
        pObject: *mut V5_DeviceVisionObject,
    ) -> i32;
}
extern "C" {
    pub fn vexVisionSignatureSet(index: u32, pSignature: *mut V5_DeviceVisionSignature);
}
extern "C" {
    pub fn vexVisionSignatureGet(
        index: u32,
        id: u32,
        pSignature: *mut V5_DeviceVisionSignature,
    ) -> bool;
}
extern "C" {
    pub fn vexVisionBrightnessSet(index: u32, percent: u8);
}
extern "C" {
    pub fn vexVisionBrightnessGet(index: u32) -> u8;
}
